name:                python-pickle
version:             0.2.3
Cabal-Version:       >= 1.8
synopsis:            Serialization/deserialization using Python Pickle format.
description:
  This package implements serialization and deserialization of Python objects
  using the Pickle format.
category:            Development
license:             BSD3
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          thu@hypered.be
build-type:          Simple

source-repository head
  type: git
  location: https://github.com/noteed/python-pickle

library
  build-depends:       attoparsec == 0.14.*,
                       base == 4.*,
                       bytestring == 0.11.*,
                       cereal == 0.5.*,
                       containers == 0.6.*,
                       mtl == 2.2.*,
		       text == 1.2.*
  exposed-modules:     Language.Python.Pickle
  ghc-options:         -Wall

executable pickle
  main-is:             pickle.hs
  hs-source-dirs:      bin/
  build-depends:       base == 4.*,
                       bytestring == 0.11.*,
                       cmdargs == 0.10.*,
                       python-pickle
  ghc-options:         -Wall

test-suite pickled-values
  hs-source-dirs: tests
  main-is: PickledValues.hs
  type: exitcode-stdio-1.0

  build-depends:
    base == 4.*,
    bytestring == 0.11.*,
    containers == 0.6.*,
    directory == 1.3.*,
    HUnit == 1.6.*,
    python-pickle,
    process == 1.6.*,
    test-framework == 0.8.*,
    test-framework-hunit == 0.3.*

  ghc-options: -Wall
