name:                python-pickle
version:             0.3.0
Cabal-Version:       >= 1.8
synopsis:            Serialization/deserialization using Python Pickle format.
description:
  This package implements serialization and deserialization of Python objects
  using the Pickle format.
category:            Development
license:             BSD3
license-file:        LICENSE
author:              Vo Minh Thu, Timothy Copeland
maintainer:          timothy@timothycopeland.net
build-type:          Simple

source-repository head
  type: git
  location: https://github.com/noteed/python-pickle

library
  build-depends:       attoparsec >= 0.14.4 && < 0.15,
                       base >= 4.16.4 && < 4.17,
                       bytestring >= 0.11.4 && < 0.12,
                       cereal >= 0.5.8 && < 0.6,
                       containers >= 0.6.5 && < 0.7,
                       mtl >= 2.2.2 && < 2.3,
                       text >= 1.2.5 && < 1.3
  exposed-modules:     Language.Python.Pickle
  ghc-options:         -Wall

executable pickle
  main-is:             pickle.hs
  hs-source-dirs:      bin/
  build-depends:       base,
                       bytestring,
                       cmdargs >= 0.10.22 && < 0.11,
                       python-pickle
  ghc-options:         -Wall

test-suite pickled-values
  hs-source-dirs: tests
  main-is: PickledValues.hs
  type: exitcode-stdio-1.0

  build-depends:
    base,
    bytestring,
    containers,
    directory,
    HUnit,
    python-pickle,
    process,
    test-framework,
    test-framework-hunit

  ghc-options: -Wall
